// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app/Details show the correct state for the sidebar open button 1`] = `
<button
  class="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isopen"
  title="Close the sidebar"
  type="button"
/>
`;

exports[`app/Details show the correct state for the sidebar open button 2`] = `
<button
  class="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
  title="Open the sidebar"
  type="button"
/>
`;

exports[`app/Details show the correct state for the sidebar open button 3`] = `
<button
  class="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
  title="Open the sidebar"
  type="button"
/>
`;

exports[`app/Details show the correct state for the sidebar open button 4`] = `
<button
  class="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
  title="Open the sidebar"
  type="button"
/>
`;
